--- a/index.html
+++ b/index.html
@@ -114,10 +114,12 @@
 </corps> 
 <footer>
   <div id="lu"> <!-- un menu avec des icones vers les sites sus-nommée-->
-    <a href="https://www.facebook.com"><img src="images/facebook.png"class="img" title="Facebook"></a>
-    <a href="https://www.instagram.com" ><img src="images/instagram.png" class="img" title="instagram"></a>
-    <a href="https://www.whatsapp.com/" ><img src="images/whatsapp.png" class="img" title="whatsapp"></a>
-    <a href="https://www.youtube.com" ><img src="images/youtube.png" class="img" title="youtube"></a>
+    <ol>
+      <li><a href="https://www.facebook.com"><img src="images/facebook.webp" class="img" title="facebook"></a></li>
+      <li><a href="https://www.instagram.com"><img src="images/instagram.webp" class="img" title="instagram"></a></li>
+      <li><a href="https://www.whatsapp.com/"><img src="images/whatsapp.webp" class="img" title="whatsapp"></a></li>
+      <li><a href="https://www.linkedin.fr"><img src="images/Linkedin.webp" class="img" title="linkedin"></a></li>
+  </ol>
    </div>
 
 </footer>
