--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 <footer>
   <div id="lu"> <!-- un menu avec des icones vers les sites sus-nommée-->
     <ol>
-      <li><a href="https://www.facebook.com"><img src="images/facebook.webp" class="img" title="facebook"></a></li>
-      <li><a href="https://www.instagram.com"><img src="images/instagram.webp" class="img" title="instagram"></a></li>
-      <li><a href="https://www.whatsapp.com/"><img src="images/whatsapp.webp" class="img" title="whatsapp"></a></li>
-      <li><a href="https://www.linkedin.fr"><img src="images/Linkedin.webp" class="img" title="linkedin"></a></li>
+      <li><a href="https://www.facebook.com"><img src="./images/facebook.webp" class="img" title="facebook"></a></li>
+      <li><a href="https://www.instagram.com"><img src="./images/instagram.webp" class="img" title="instagram"></a></li>
+      <li><a href="https://www.whatsapp.com/"><img src="./images/whatsapp.webp" class="img" title="whatsapp"></a></li>
+      <li><a href="https://www.linkedin.fr"><img src="./images/Linkedin.webp" class="img" title="linkedin"></a></li>
   </ol>
    </div>
 
