--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body >
 <header>
-  <div id="mySidenav" class="sidenav"> <!-- ici j'ai voulu créer un menu dit "burger" pour la partie téléphone, 
-    j'ai été le chercher et travailler dans codepen-->
-    <a id="closeBtn" href="#" class="close">x</a>
+  <div class="menu"> 
     <ul>
       <li><a href="#grandeboite">Infos Utiles</a></li>
       <li><a href="#grandeboite1">Experience</a></li>
@@ -19,14 +17,6 @@
       <li><a href="#lu">Liens</a></li>
     </ul>
   </div>
-  
-  <a title="sidenav" href="#" id="openBtn">
-    <span class="burger-icon">
-      <span></span>
-      <span></span>
-      <span></span>
-    </span>
-  </a>
 </header>
 <corps>
  <section> <!--Voici la première partie ou j'ai reproduit mes premières infos en pass Carmillon SNCF-->
@@ -115,14 +105,13 @@
 <footer>
   <div id="lu"> <!-- un menu avec des icones vers les sites sus-nommée-->
     <ol>
-      <li><a href="https://www.facebook.com"><img src="./images/facebook.webp" class="img" title="facebook"></a></li>
-      <li><a href="https://www.instagram.com"><img src="./images/instagram.webp" class="img" title="instagram"></a></li>
-      <li><a href="https://www.whatsapp.com/"><img src="./images/whatsapp.webp" class="img" title="whatsapp"></a></li>
-      <li><a href="https://www.linkedin.fr"><img src="./images/Linkedin.webp" class="img" title="linkedin"></a></li>
+      <li><a href="https://www.facebook.com"><img src="./images/facebook.webp" class="img" title="facebook" alt="facebook"></a></li>
+      <li><a href="https://www.instagram.com"><img src="./images/instagram.webp" class="img" title="instagram" alt="instagram"></a></li>
+      <li><a href="https://www.whatsapp.com/"><img src="./images/whatsapp.webp" class="img" title="whatsapp" alt="whatsapp"></a></li>
+      <li><a href="https://www.linkedin.com"><img src="./images/Linkedin.webp" class="img" title="linkedin" alt="linkedin"></a></li>
   </ol>
    </div>
 
 </footer>
-<script src="scripts.js"></script>
 </body>
 </html>
