--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
   <div class="menu"> 
     <ul>
-      <li><a href="#grandeboite">Infos Utiles</a></li>
+      <li><a href="#grandeboite">Infos</a></li>
       <li><a href="#grandeboite1">Experience</a></li>
       <li><a href="#grandeboite2">Parcours</a></li>
       <li><a href="#lu">Liens</a></li>
