--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body >
 <header>
-  <div class="menu"> 
+  <div> 
     <ul>
       <li><a href="#grandeboite">Infos</a></li>
       <li><a href="#grandeboite1">Experience</a></li>
