--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <li><a href="https://www.facebook.com"><img src="./images/facebook.svg" class="img" title="facebook" alt="facebook"></a></li>
       <li><a href="https://www.instagram.com"><img src="./images/instagram.svg" class="img" title="instagram" alt="instagram"></a></li>
       <li><a href="https://www.whatsapp.com/"><img src="./images/whatsapp.svg" class="img" title="whatsapp" alt="whatsapp"></a></li>
-      <li><a href="https://www.linkedin.com"><img src="./images/Linkedin.svg" class="img" title="linkedin" alt="linkedin"></a></li>
+      <li><a href="https://www.linkedin.com"><img src="./images/linkedin.svg" class="img" title="linkedin" alt="linkedin"></a></li>
   </ol>
    </div>
 
