--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div> 
     <ul>
       <li><a href="#grandeboite">Infos</a></li>
-      <li><a href="#grandeboite1">Experience</a></li>
+      <li><a href="#grandeboite1">Expérience</a></li>
       <li><a href="#grandeboite2">Parcours</a></li>
       <li><a href="#lu">Liens</a></li>
     </ul>
@@ -40,9 +40,9 @@
       <h3>2018 - à ce jour</h3>
         <p class="text">
           Mainteneur de l'infrastructure à la brigade de Gretz.<br>
-          Taches administrative<br>
+          Tâches administratives<br>
           Gestion d'une équipe de 12 personnes<br>
-          Organisation et execution des chantiers de maintenances<br>
+          Organisation et exécution des chantiers de maintenance<br>
         </p>
       
       <h3>2014-2018</h3>
@@ -61,12 +61,12 @@
         </p>
       <h3>2000-2004</h3>
         <p class="text">
-          Vendeur/étalagiste au rayon Livre pour Boulinier(Paris)<br>
+          Vendeur/étalagiste au rayon Livre pour Boulinier (Paris)<br>
           Gérant sur la dernière année<br>
         </p>
       <h3>1998-2000</h3>
         <p class="text">
-          Divers poste Mécanicien Auto pour Pôle Emploi<br>
+          Divers postes Mécanicien Auto pour Pôle Emploi<br>
         </p>
  </div>
  </section>
@@ -87,13 +87,13 @@
       Pour pouvoir le passer, il me manquait toute la pratique, 
       alors j'ai demandé à occuper le poste de chef adjoint de brigade pour pouvoir étoffer ma pratique de mon métier. 
       J'ai tenté le concours en <em>2021</em>, mais je n'ai pas réussi car il me manquait 1 point et je n'ai pas pu le repasser par la suite car c'était la dernière possibilité.
-      Entre-temps, je me suis renseigné sur la perspective d'évolution vers un autre métier qui découle de la passion que j'ai pour l'informatique. 
-      Je pratique cette passion depuis l'année 2000 et j'ai commencé par le côté Hardware en démontant et préparant des configurations de PC à l'aide de livres. 
+      Entre temps, je me suis renseigné sur la perspective d'évolution vers un autre métier qui découle de la passion que j'ai pour l'informatique. 
+      Cette passion est née en 2000 et j'ai commencé par le côté Hardware en démontant et préparant des configurations de PC à l'aide de livres. 
       Cela m'a permis d'augmenter les performances du PC afin de pouvoir jouer aux jeux vidéo. 
-      J'ai eu une grande période de gaming dans laquelle j'étais sur des jeux massivement multijoueurs et où je tenais un rôle de leader de guilde et leader de raid. 
-      Cela demandait beaucoup d'organisation et de communication, alors il a fallu qu'on ait un moyen par lequel on pouvait avoir toutes les infos et instructions du jeu. 
-      C'est ainsi que j'ai commencé à faire de <em>l'HTML, SQL, PHP et CSS,</em> qui consistait dans un premier temps à avoir une page déjà faite dans laquelle je pouvais bidouiller, 
-      mais par la suite, je voulais pousser mes connaissances pour en faire une par moi-même. 
+      J'ai eu une grande période de gaming dans laquelle je jouais à des jeux massivement multijoueurs et où je tenais un rôle de leader de guilde et leader de raid. 
+      Cela demandait beaucoup d'organisation et de communication, Nous avons donc eu besoin d'un moyen pour obtenir toutes les informations et instructions du jeu. 
+      C'est ainsi que j'ai commencé à faire de <em>l'HTML, SQL, PHP et CSS,</em> qui consistait dans un premier temps à avoir une page déjà faite dans laquelle je pouvais faire des tests, 
+      mais par la suite, j'ai voulu pousser mes connaissances pour en faire une par moi-même. 
       J'ai appris au travers des livres que j'empruntais à la librairie de mon second travail. 
       J'ai continué à vouloir apprendre divers logiciels tels que la <em>3D, Excel, Python, etc.</em> jusqu'à aujourd'hui. 
       J'essaie de m'en servir au quotidien dans mon travail pour améliorer certains aspects de mon métier.
