--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 </corps> 
 <footer>
-  <div id="lu"> <!-- un menu avec des icones vers les sites sus-nommée-->
+  <div id="lu">
     <ol>
       <li><a href="https://www.facebook.com"><img src="./images/facebook.svg" class="img" title="facebook" alt="facebook"></a></li>
       <li><a href="https://www.instagram.com"><img src="./images/instagram.svg" class="img" title="instagram" alt="instagram"></a></li>
