--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  </section>
  <section>
  <div id="grandeboite1"> <!-- toujours en mode Pass Carmillon mais en fonds neutre-->
-  <h2>Experience</h2>
+  <h2>Expérience</h2>
       <h3>2018 - à ce jour</h3>
         <p class="text">
           Mainteneur de l'infrastructure à la brigade de Gretz.<br>
