--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body >
 <header>
-  <div> 
+  <div id="mySidenav" class="sidenav"> <!-- ici j'ai voulu créer un menu dit "burger" pour la partie téléphone, 
+    j'ai été le chercher et travailler dans codepen-->
+    <a id="closeBtn" href="#" class="close">x</a>
     <ul>
       <li><a href="#grandeboite">Infos</a></li>
       <li><a href="#grandeboite1">Expérience</a></li>
@@ -17,6 +19,14 @@
       <li><a href="#lu">Liens</a></li>
     </ul>
   </div>
+  
+  <a title="sidenav" href="#" id="openBtn">
+    <span class="burger-icon">
+      <span></span>
+      <span></span>
+      <span></span>
+    </span>
+  </a>
 </header>
 <corps>
  <section> <!--Voici la première partie ou j'ai reproduit mes premières infos en pass Carmillon SNCF-->
