--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
   </div>
   
-  <a title="sidenav" href="#" id="openBtn">
+  <a title="sidenav" href="#mySidenav" id="openBtn">
     <span class="burger-icon">
       <span></span>
       <span></span>
