--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       Cette passion est née en 2000 et j'ai commencé par le côté Hardware en démontant et préparant des configurations de PC à l'aide de livres. 
           Cela m'a permis d'augmenter les performances du PC afin de pouvoir jouer aux jeux vidéo. </p><br>
       <p>J'ai eu une grande période de gaming dans laquelle Je jouais à des jeux massivement multijoueurs et où je tenais un rôle de leader de guilde et leader de raid. 
-      Cela demandait beaucoup d'organisation et de communication, Nous avons donc eu besoin d'un moyen pour obtenir toutes les informations et instructions du jeu. 
+      Cela demandait beaucoup d'organisation et de communication, Nous avions donc besoin d'un moyen pour obtenir toutes les informations et instructions du jeu. 
       C'est ainsi que j'ai commencé à faire de <em>l'HTML, SQL, PHP et CSS,</em> qui consistait dans un premier temps à avoir une page déjà faite dans laquelle je pouvais faire des tests, 
       mais par la suite, j'ai voulu pousser mes connaissances pour en faire une par moi-même. 
       J'ai appris au travers des livres que j'empruntais à la librairie de mon second travail. 
