--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Curriculum Vitae</title>
 </head>
 <body>
+  <!-- création d'un petit bouton retour avec son script JS-->
+  <div class="btn">
+   <img  title="retour" src="./images/flèche.png" class="icone">
+  </div>
 <header>
+  <!-- ici j'aurais pu aussi faire mon menu avec du javascript mais il est possible de le faire en CSS-->
+  
     <nav class="navbar">
         <a href="#" class="titre">Curiculum Vitae</a>
         <label for="btn" class="icon">
@@ -40,9 +46,8 @@
             </li>
         </ul>
     </nav>
-<corps>
- <section> <!--Voici la première partie ou j'ai reproduit mes premières infos en pass Carmillon SNCF-->
-   <div id="grandeboite">
+ <!--Voici la première partie ou j'ai reproduit mes premières infos en pass Carmillon SNCF-->
+  <div id="grandeboite">
     
     <img title="SNCF" src="images/SNCF.webp"  id="logo">
 
@@ -54,9 +59,7 @@
         Diplome : BEP/CAP Mécanique Auto</p>
 
     <img title="Nicolas Perthuisot" src="images/NP.png" id="profil">
-   </div>
- </section>
- <section>
+  </div>
  <div id="grandeboite1"> <!-- toujours en mode Pass Carmillon mais en fonds neutre-->
   <h2>Experience</h2>
       <h3>2018 - à ce jour</h3>
@@ -91,8 +94,6 @@
           Divers postes Mécanicien Auto pour Pôle Emploi<br>
         </p>
  </div>
- </section>
- <section>
   <div id="grandeboite2"> <!-- on recommence pour la partie parcours perso-->
     <h2>Parcours</h2>
     <p class="text">
@@ -100,30 +101,28 @@
       Je suis diplômé d'un BEP/CAP en mécanique automobile que j'ai obtenu en <em>1998.</em> 
       J'ai commencé ma carrière professionnelle en effectuant quelques missions et formations pour Pôle emploi dans ce domaine. 
       À la suite d'un accident de travail, j'ai changé de style de travail et j'ai travaillé en tant que vendeur étalagiste dans une librairie. 
-        J'y suis resté <em>4 ans</em> et j'ai pu évoluer au poste de gérant. </p><br>
-      <p class="text">Cependant, les conditions de travail ne me plaisaient plus, alors j'ai postulé à la SNCF. 
+      J'y suis resté <em>4 ans</em> et j'ai pu évoluer au poste de gérant. 
+      Cependant, les conditions de travail ne me plaisaient plus, alors j'ai postulé à la SNCF. 
       On m'a proposé le poste d'opérateur, j'ai été formé sur <em>2 ans</em> et j'ai tenu ce poste pendant <em>10 ans.</em> 
       Une proposition d'évolution vers une spécialisation de ce métier s'est présentée et j'ai été sélectionné. 
       J'ai tenu ce poste pendant <em>4 ans</em>, ce qui m'a permis d'évoluer à la qualification supérieure et d'être à nouveau formé pendant 2 ans. 
-      Je voulais continuer mon évolution en passant le concours EV7 pour devenir Technicien spécialisé. </p><br>
-      <p class="text">Pour pouvoir le passer, il me manquait toute la pratique, 
+      Je voulais continuer mon évolution en passant le concours EV7 pour devenir Technicien spécialisé. 
+      Pour pouvoir le passer, il me manquait toute la pratique, 
       alors j'ai demandé à occuper le poste de chef adjoint de brigade pour pouvoir étoffer ma pratique de mon métier. 
       J'ai tenté le concours en <em>2021</em>, mais je n'ai pas réussi car il me manquait 1 point et je n'ai pas pu le repasser par la suite car c'était la dernière possibilité.
       Entre temps, je me suis renseigné sur la perspective d'évolution vers un autre métier qui découle de la passion que j'ai pour l'informatique. 
       Cette passion est née en 2000 et j'ai commencé par le côté Hardware en démontant et préparant des configurations de PC à l'aide de livres. 
-          Cela m'a permis d'augmenter les performances du PC afin de pouvoir jouer aux jeux vidéo. </p><br>
-      <p class="text">J'ai eu une grande période de gaming dans laquelle Je jouais à des jeux massivement multijoueurs et où je tenais un rôle de leader de guilde et leader de raid. 
-      Cela demandait beaucoup d'organisation et de communication, Nous avions donc besoin d'un moyen pour obtenir toutes les informations et instructions du jeu. 
+      Cela m'a permis d'augmenter les performances du PC afin de pouvoir jouer aux jeux vidéo. 
+      J'ai eu une grande période de gaming dans laquelle Je jouais à des jeux massivement multijoueurs et où je tenais un rôle de leader de guilde et leader de raid. 
+      Cela demandait beaucoup d'organisation et de communication, Nous avons donc eu besoin d'un moyen pour obtenir toutes les informations et instructions du jeu. 
       C'est ainsi que j'ai commencé à faire de <em>l'HTML, SQL, PHP et CSS,</em> qui consistait dans un premier temps à avoir une page déjà faite dans laquelle je pouvais faire des tests, 
       mais par la suite, j'ai voulu pousser mes connaissances pour en faire une par moi-même. 
       J'ai appris au travers des livres que j'empruntais à la librairie de mon second travail. 
-      J'ai continué à vouloir apprendre divers logiciels tels que la <em>3D, Excel, Python, etc.</em> jusqu'à ce jour. </p><br>
-      <p class="text">J'essaie de m'en servir au quotidien dans mon travail pour améliorer certains aspects de mon métier.
+      J'ai continué à vouloir apprendre divers logiciels tels que la <em>3D, Excel, Python, etc.</em> jusqu'à ce jour. 
+      J'essaie de m'en servir au quotidien dans mon travail pour améliorer certains aspects de mon métier.
       En <em>2022,</em> à la suite de divers problèmes de santé, j'ai été déclaré inapte pour le poste que j'occupais actuellement. 
       J'ai donc candidaté pour le poste de Web développeur au sein de la SNCF.</p>
-</div>
-
-</corps> 
+</div> 
 <footer>
     <ul id="lu">
       <li><a href="https://www.facebook.com" class="a2"><img src="images/facebook.svg"class="img" title="Facebook"></a></li>
@@ -132,5 +131,6 @@
       <li><a href="https://www.linkedin.com" class="a2"><img src="images/linkedin.svg" class="img" title="linkedin"></a></li>
     </ul>
 </footer>
+<script src="app.js"></script>
 </body>
 </html>
