--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- ici j'aurais pu aussi faire mon menu avec du javascript mais il est possible de le faire en CSS-->
   
     <nav class="navbar">
-        <a href="#" class="titre">Curiculum Vitae</a>
+        <a href="#" class="titre">CV</a>
         <label for="btn" class="icon">
             <svg viewBox="0 0 100 80" width="40" height="40">
                 <rect width="100" height="15"></rect>
