--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
  <!--Voici la première partie ou j'ai reproduit mes premières infos en pass Carmillon SNCF-->
   <section id="grandeboite">
     
-    <img title="SNCF" src="images/SNCF.webp"  class="logo">
+    <img title="SNCF" src="./images/SNCF.webp"  class="logo">
 
     <h1>Nicolas Perthuisot</h1>
 
