--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         Tel : 06 21 43 61 25<br>
      </p>
 
-    <img title="Nicolas Perthuisot" src="images/NP.png" class="profil">
+    <img title="Nicolas Perthuisot" src="./images/NP.png" class="profil">
     </section>
   <section id="grandeboite1">
      <!-- toujours en mode Pass Carmillon mais en fonds neutre-->
