--- a/index.html
+++ b/index.html
@@ -33,15 +33,21 @@
                 <a href="#grandeboite1">Expérience</a>
             </li>
             <li class="nav-item">
-                <a href="#grandeboite2">Parcours</a>
-            </li>
-            <li class="nav-item">
                 <label for="btn2" class="show">+</label>
                 <input type="checkbox" id="btn2">
                 <ul class="dropdown">
                     <li class="drop-item">
-                        <a href="#lu">Réseau Sociaux</a>
-                    </li>
+                      <a href="#grandeboite3">Qualités</a>
+                  </li>
+                  <li class="drop-item">
+                    <a href="#grandeboite4">Hobbies</a>
+                </li>
+                <li class="drop-item">
+                  <a href="#grandeboite2">Parcours</a>
+              </li>
+              <li class="drop-item">
+                <a href="#lu">Réseau Sociaux</a>
+            </li>
                 </ul>
             </li>
         </ul>
@@ -49,16 +55,16 @@
  <!--Voici la première partie ou j'ai reproduit mes premières infos en pass Carmillon SNCF-->
   <section id="grandeboite">
     
-    <img title="SNCF" src="./images/SNCF.webp"  class="logo">
+    <img title="SNCF" src="images/SNCF.webp"  class="logo">
 
     <h1>Nicolas Perthuisot</h1>
 
-     <p>Développement web :  HTML/CSS<br>
+    <p>Développement web :  HTML/CSS<br>
         nicolas.perthuisot@sncf.fr<br>
         Tel : 06 21 43 61 25<br>
      </p>
 
-    <img title="Nicolas Perthuisot" src="./images/NP.png" class="profil">
+    <img title="Nicolas Perthuisot" src="images/NP.png" class="profil">
     </section>
   <section id="grandeboite1">
      <!-- toujours en mode Pass Carmillon mais en fonds neutre-->
@@ -69,11 +75,11 @@
     <div class="p3 space">
       <h3>Mainteneur de l'infrastructure à la brigade de Gretz<br>
       <em>SNCF Réseau, Gretz</em></h3>
-      <p class="text2">Organisation, gestion et réalisation des différents chantiers
+      <div class="text2">Organisation, gestion et réalisation des différents chantiers
       demandés par SNCF réseau.
       Suivi des chantiers, application des règles techniques de la voie.
       Réalisation des cycles de maintenance de la voie au cours de
-      l’année calendaire.</p>
+      l’année calendaire.</div>
     </div>
 
     <div class="p4 date">
@@ -83,9 +89,9 @@
     <div class="p5 space">
       <h3>Assistant Technique d’Unité spécialisé Rails<br>
       <em>SNCF Réseau, Meaux</em></h3>
-      <p class="text2">Recherche, classification, gestion des plannings d'équipes
+      <div class="text2">Recherche, classification, gestion des plannings d'équipes
       spécialisées, suivi des défauts de rails.
-      Suivi des bases de données jusqu’à suppression des anomalies.</p>
+      Suivi des bases de données jusqu’à suppression des anomalies.</div>
     </div>
 
     <div class="p6 date">
@@ -95,8 +101,8 @@
     <div class="p7 space">
       <h3>Agent d’Entretien Voie<br>
       <em>SNCF Réseau, Meaux</em></h3>
-      <p class="text2">Entretien du réseau de la voie ferrée, sous la responsabilité des
-      mainteneurs de l’infrastructure.</p>
+      <div class="text2">Entretien du réseau de la voie ferrée, sous la responsabilité des
+      mainteneurs de l’infrastructure.</div>
     </div>
 
     <div class="p8 date">
@@ -105,8 +111,8 @@
     <div class="p9 space">
       <h3>Vendeur, étalagiste, gérant<br>
       <em>Boulinier, Paris</em></h3>
-      <p class="text2">Ventes en librairie, multimédia et BD (débuts comme vendeur,
-      puis gérant la dernière année).</p>
+      <div class="text2">Ventes en librairie, multimédia et BD (débuts comme vendeur,
+      puis gérant la dernière année).</div>
     </div>
 
     <div class="p10 date">
@@ -116,30 +122,30 @@
     <div class="p11 space">
       <h3>Mécanicien Automobile<br>
         <em>Divers, Meaux</em></h3>
-        <p class="text2">Plusieurs postes en intérim dans différents garages.</p>
+        <div class="text2">Plusieurs postes en intérim dans différents garages.</div>
     </div>
  </div>
   </section>
-  <section id="grandeboite3">
+  <section id="grandeboite2">
     <h2>Qualités</h2>
-        <p class="text">
+        <div class="text">
          Tenace,
          Autonome,
          Passionné,
          Curieux,
          Créatif,
-         Travail en équipe.</p>
+         Travail en équipe.</div><br>
 </section>
 <section id="grandeboite3">
     <h2>Hobbies</h2>
-        <p class="text">
+        <div class="text">
           Jeux Vidéo (Hack’n’Slash, MMO,
           RPG) ● Cinéma (science-fiction,
           action, thriller) ● Informatique
           ● Membre d’une association sur
-          Disneyland Paris</p>
+          Disneyland Paris</div><br>
   </section>
-  <section id="grandeboite2"> <!-- on recommence pour la partie parcours perso-->
+  <section id="grandeboite4"> <!-- on recommence pour la partie parcours perso-->
     <h2>Parcours</h2>
     <p class="text">
       Je m'appelle Nicolas Perthuisot et j'ai <em>42 ans.</em> 
@@ -153,20 +159,20 @@
       J'ai tenu ce poste pendant <em>4 ans</em>, ce qui m'a permis d'évoluer à la qualification supérieure et d'être à nouveau formé pendant 2 ans. 
       Je voulais continuer mon évolution en passant le concours EV7 pour devenir Technicien spécialisé.<br> 
       <br>Pour pouvoir le passer, il me manquait toute la pratique, 
-      alors j'ai demandé à occuper le poste de chef adjoint de brigade pour pouvoir étoffer ma pratique de mon métier. 
-      J'ai tenté le concours en <em>2021</em>, mais je n'ai pas réussi car il me manquait 1 point et je n'ai pas pu le repasser par la suite car c'était la dernière possibilité.
+      alors j'ai demandé à occuper le poste de chef adjoint de brigade pour pouvoir étoffer ma pratique de mon métier. <br>
+      <br>J'ai tenté le concours en <em>2021</em>, mais je n'ai pas réussi car il me manquait 1 point et je n'ai pas pu le repasser par la suite car c'était la dernière possibilité.
       Entre temps, je me suis renseigné sur la perspective d'évolution vers un autre métier qui découle de la passion que j'ai pour l'informatique. 
       Cette passion est née en 2000 et j'ai commencé par le côté Hardware en démontant et préparant des configurations de PC à l'aide de livres. 
-      Cela m'a permis d'augmenter les performances du PC afin de pouvoir jouer aux jeux vidéo. 
-      J'ai eu une grande période de gaming dans laquelle Je jouais à des jeux massivement multijoueurs et où je tenais un rôle de leader de guilde et leader de raid. 
+      Cela m'a permis d'augmenter les performances du PC afin de pouvoir jouer aux jeux vidéo.<br> 
+      <br>J'ai eu une grande période de gaming dans laquelle Je jouais à des jeux massivement multijoueurs et où je tenais un rôle de leader de guilde et leader de raid. 
       Cela demandait beaucoup d'organisation et de communication, Nous avons donc eu besoin d'un moyen pour obtenir toutes les informations et instructions du jeu. 
       C'est ainsi que j'ai commencé à faire de <em>l'HTML, SQL, PHP et CSS,</em> qui consistait dans un premier temps à avoir une page déjà faite dans laquelle je pouvais faire des tests, 
-      mais par la suite, j'ai voulu pousser mes connaissances pour en faire une par moi-même. 
-      J'ai appris au travers des livres que j'empruntais à la librairie de mon second travail. 
+      mais par la suite, j'ai voulu pousser mes connaissances pour en faire une par moi-même. <br>
+      <br>J'ai appris au travers des livres que j'empruntais à la librairie de mon second travail. 
       J'ai continué à vouloir apprendre divers logiciels tels que la <em>3D, Excel, Python, etc.</em> jusqu'à ce jour. 
-      J'essaie de m'en servir au quotidien dans mon travail pour améliorer certains aspects de mon métier.
-      En <em>2022,</em> à la suite de divers problèmes de santé, j'ai été déclaré inapte pour le poste que j'occupais actuellement. 
-      J'ai donc candidaté pour le poste de Web développeur au sein de la SNCF.</p>
+      J'essaie de m'en servir au quotidien dans mon travail pour améliorer certains aspects de mon métier.<br>
+      <br>En <em>2022,</em> à la suite de divers problèmes de santé, j'ai été déclaré inapte pour le poste que j'occupais actuellement. 
+      J'ai donc candidaté pour le poste de Web développeur au sein de la SNCF.</p><br>
   </section> 
 <footer>
     <ul id="lu">
