--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
 
     <h1>Nicolas Perthuisot</h1>
 
-    <p>Développement web :  HTML/CSS<br>
+    <div class="pb1">Développement web :  HTML/CSS/JS<br>
         nicolas.perthuisot@sncf.fr<br>
         Tel : 06 21 43 61 25<br>
-     </p>
+    </div>
 
     <img title="Nicolas Perthuisot" src="images/NP.png" class="profil">
-    </section>
+  </section>
   <section id="grandeboite1">
      <!-- toujours en mode Pass Carmillon mais en fonds neutre-->
-  <div class="p1" ><h2>Experience</h2></div>
+  <div class="p1"><h2>Experience</h2><div>
 
   <div class="p2 date">2018<br>à ce jour</div>
 
     <div class="p3 space">
       <h3>Mainteneur de l'infrastructure à la brigade de Gretz<br>
       <em>SNCF Réseau, Gretz</em></h3>
-      <div class="text2">Organisation, gestion et réalisation des différents chantiers
+      <div class="text1">Organisation, gestion et réalisation des différents chantiers
       demandés par SNCF réseau.
       Suivi des chantiers, application des règles techniques de la voie.
       Réalisation des cycles de maintenance de la voie au cours de
@@ -89,7 +89,7 @@
     <div class="p5 space">
       <h3>Assistant Technique d’Unité spécialisé Rails<br>
       <em>SNCF Réseau, Meaux</em></h3>
-      <div class="text2">Recherche, classification, gestion des plannings d'équipes
+      <div class="text1">Recherche, classification, gestion des plannings d'équipes
       spécialisées, suivi des défauts de rails.
       Suivi des bases de données jusqu’à suppression des anomalies.</div>
     </div>
@@ -101,7 +101,7 @@
     <div class="p7 space">
       <h3>Agent d’Entretien Voie<br>
       <em>SNCF Réseau, Meaux</em></h3>
-      <div class="text2">Entretien du réseau de la voie ferrée, sous la responsabilité des
+      <div class="text1">Entretien du réseau de la voie ferrée, sous la responsabilité des
       mainteneurs de l’infrastructure.</div>
     </div>
 
@@ -111,7 +111,7 @@
     <div class="p9 space">
       <h3>Vendeur, étalagiste, gérant<br>
       <em>Boulinier, Paris</em></h3>
-      <div class="text2">Ventes en librairie, multimédia et BD (débuts comme vendeur,
+      <div class="text1">Ventes en librairie, multimédia et BD (débuts comme vendeur,
       puis gérant la dernière année).</div>
     </div>
 
@@ -122,7 +122,7 @@
     <div class="p11 space">
       <h3>Mécanicien Automobile<br>
         <em>Divers, Meaux</em></h3>
-        <div class="text2">Plusieurs postes en intérim dans différents garages.</div>
+        <div class="text1">Plusieurs postes en intérim dans différents garages.</div>
     </div>
  </div>
   </section>
@@ -147,7 +147,7 @@
   </section>
   <section id="grandeboite4"> <!-- on recommence pour la partie parcours perso-->
     <h2>Parcours</h2>
-    <p class="text">
+    <div class="text">
       Je m'appelle Nicolas Perthuisot et j'ai <em>42 ans.</em> 
       Je suis diplômé d'un BEP/CAP en mécanique automobile que j'ai obtenu en <em>1998.</em> 
       J'ai commencé ma carrière professionnelle en effectuant quelques missions et formations pour Pôle emploi dans ce domaine. 
@@ -172,7 +172,7 @@
       J'ai continué à vouloir apprendre divers logiciels tels que la <em>3D, Excel, Python, etc.</em> jusqu'à ce jour. 
       J'essaie de m'en servir au quotidien dans mon travail pour améliorer certains aspects de mon métier.<br>
       <br>En <em>2022,</em> à la suite de divers problèmes de santé, j'ai été déclaré inapte pour le poste que j'occupais actuellement. 
-      J'ai donc candidaté pour le poste de Web développeur au sein de la SNCF.</p><br>
+      J'ai donc candidaté pour le poste de Web développeur au sein de la SNCF.</div><br>
   </section> 
 <footer>
     <ul id="lu">
