--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     
     <img title="SNCF" src="images/SNCF.webp"  class="logo">
 
-    <h1>Nicolas Perthuisot</h1>
+    <div class="pb1"><h1>Nicolas Perthuisot</h1></div>
 
-    <div class="pb1">Développement web :  HTML/CSS/JS<br>
+    <div class="pb2">Développement web :  HTML/CSS/JS<br>
         nicolas.perthuisot@sncf.fr<br>
         Tel : 06 21 43 61 25<br>
     </div>
@@ -67,64 +67,83 @@
     <img title="Nicolas Perthuisot" src="images/NP.png" class="profil">
   </section>
   <section id="grandeboite1">
-     <!-- toujours en mode Pass Carmillon mais en fonds neutre-->
-  <div class="p1"><h2>Experience</h2><div>
-
-  <div class="p2 date">2018<br>à ce jour</div>
-
-    <div class="p3 space">
-      <h3>Mainteneur de l'infrastructure à la brigade de Gretz<br>
-      <em>SNCF Réseau, Gretz</em></h3>
-      <div class="text1">Organisation, gestion et réalisation des différents chantiers
-      demandés par SNCF réseau.
-      Suivi des chantiers, application des règles techniques de la voie.
-      Réalisation des cycles de maintenance de la voie au cours de
-      l’année calendaire.</div>
-    </div>
-
-    <div class="p4 date">
-      2014 - <br>2018
-    </div>
-
-    <div class="p5 space">
-      <h3>Assistant Technique d’Unité spécialisé Rails<br>
-      <em>SNCF Réseau, Meaux</em></h3>
-      <div class="text1">Recherche, classification, gestion des plannings d'équipes
-      spécialisées, suivi des défauts de rails.
-      Suivi des bases de données jusqu’à suppression des anomalies.</div>
-    </div>
-
-    <div class="p6 date">
-      2004 - <br>2014
-    </div>
-
-    <div class="p7 space">
-      <h3>Agent d’Entretien Voie<br>
-      <em>SNCF Réseau, Meaux</em></h3>
-      <div class="text1">Entretien du réseau de la voie ferrée, sous la responsabilité des
-      mainteneurs de l’infrastructure.</div>
-    </div>
-
-    <div class="p8 date">
-      2000 - <br>2004
-    </div> 
-    <div class="p9 space">
-      <h3>Vendeur, étalagiste, gérant<br>
-      <em>Boulinier, Paris</em></h3>
+     <!-- ici on fait un tableau pour présenter son Expérience-->
+  <h2>Experience</h2>
+    <table>
+      <tr>
+          <td><div class="date">2018<br>à ce jour</div></td>
+          <td><div class="space">
+        <h3>Mainteneur de l'infrastructure à la brigade de Gretz</h3>
+        <h4><em>SNCF Réseau, Gretz</em></h4>
+        <div class="text1">Organisation, gestion et réalisation des différents chantiers
+        demandés par SNCF réseau.
+        Suivi des chantiers, application des règles techniques de la voie.
+        Réalisation des cycles de maintenance de la voie au cours de
+        l’année calendaire.</div>
+      </div></td>
+      </tr>
+      <tr>
+          <td><div class="date">
+        2014 - <br>2018
+      </div></td>
+          <td> <div class="space">
+        <h3>Assistant Technique d’Unité spécialisé Rails</h3>
+        <h4></h4><em>SNCF Réseau, Meaux</em></h4>
+        <div class="text1">Recherche, classification, gestion des plannings d'équipes
+        spécialisées, suivi des défauts de rails.
+        Suivi des bases de données jusqu’à suppression des anomalies.</div>
+      </div>
+        </td>
+        </tr>
+        <tr>
+        <td>
+          <div class="date">
+            2004 - <br>2014
+      </div>
+        </td>
+        <td><div class="space">
+          <h3>Agent d’Entretien Voie</h3>
+          <h4></h4><em>SNCF Réseau, Meaux</em></h4>
+          <div class="text1">Entretien du réseau de la voie ferrée, sous la responsabilité des
+          mainteneurs de l’infrastructure.</div>
+        </div></td>
+        </tr>
+        <td>
+      <div class="date">
+        2000 - <br>2004
+      </div>
+        </td>
+        <td>
+      <div class="t4 space">
+      <h3>Vendeur, étalagiste, gérant</h3>
+      <h4><em>Boulinier, Paris</em></h4>
       <div class="text1">Ventes en librairie, multimédia et BD (débuts comme vendeur,
       puis gérant la dernière année).</div>
-    </div>
-
-    <div class="p10 date">
-      1998 -<br>2000
-    </div>
-
-    <div class="p11 space">
-      <h3>Mécanicien Automobile<br>
-        <em>Divers, Meaux</em></h3>
-        <div class="text1">Plusieurs postes en intérim dans différents garages.</div>
-    </div>
- </div>
+    </div></td>
+</tr>
+<td>
+  <div class="date">
+    1998 -<br>2000
+  </div>
+</td>
+<td>    <div class="space">
+  <h3>Mécanicien Automobile</h3>
+  <h4><em>Divers, Meaux</em></h4>
+    <div class="text1">Plusieurs postes en intérim dans différents garages.</div>
+</div>
+</div></td>
+</tr>
+</table>
+<h2>Formation</h2>
+<table>
+  <tr>
+    <td><div class="date">1998</div></td>
+    <td><div class="space">
+  <h3>BEP/CAP Mécanicien, option véhicule léger</h3>
+   <h4><em>Lycée Georges Cormier, Coulommiers</em></h4>
+</div></td>
+</tr>
+</table>
   </section>
   <section id="grandeboite2">
     <h2>Qualités</h2>
