--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
     
     <img title="SNCF" src="images/SNCF.webp"  class="logo">
 
-    <div class="pb1"><h1>Nicolas Perthuisot</h1></div>
-
-    <div class="pb2">Développement web :  HTML/CSS/JS<br>
+    <div class="pb1"><h1>Nicolas Perthuisot</h1>
+        <p>Développement web :  HTML/CSS/JS<br>
         nicolas.perthuisot@sncf.fr<br>
-        Tel : 06 21 43 61 25<br>
+        Tel : 06 21 43 61 25<br></p>
     </div>
 
     <img title="Nicolas Perthuisot" src="images/NP.png" class="profil">
@@ -114,7 +113,7 @@
       </div>
         </td>
         <td>
-      <div class="t4 space">
+      <div class="space">
       <h3>Vendeur, étalagiste, gérant</h3>
       <h4><em>Boulinier, Paris</em></h4>
       <div class="text1">Ventes en librairie, multimédia et BD (débuts comme vendeur,
