--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 <input type="checkbox" id="btn2">
                 <ul class="dropdown">
                     <li class="drop-item">
-                      <a href="#grandeboite3">Qualités</a>
+                      <a href="#grandeboite2">Qualités</a>
                   </li>
                   <li class="drop-item">
-                    <a href="#grandeboite4">Hobbies</a>
+                    <a href="#grandeboite3">Hobbies</a>
                 </li>
                 <li class="drop-item">
-                  <a href="#grandeboite2">Parcours</a>
+                  <a href="#grandeboite4">Parcours</a>
               </li>
               <li class="drop-item">
                 <a href="#lu">Réseau Sociaux</a>
@@ -87,7 +87,7 @@
       </div></td>
           <td> <div class="space">
         <h3>Assistant Technique d’Unité spécialisé Rails</h3>
-        <h4></h4><em>SNCF Réseau, Meaux</em></h4>
+        <h4><em>SNCF Réseau, Meaux</em></h4>
         <div class="text1">Recherche, classification, gestion des plannings d'équipes
         spécialisées, suivi des défauts de rails.
         Suivi des bases de données jusqu’à suppression des anomalies.</div>
@@ -143,30 +143,32 @@
 </div></td>
 </tr>
 </table>
-  </section>
-  <section id="grandeboite2">
+</section>
+<section id="grandeboite2">
     <h2>Qualités</h2>
-        <div class="text">
+        <div class="text2">
+         Travail en équipe,
          Tenace,
          Autonome,
          Passionné,
          Curieux,
-         Créatif,
-         Travail en équipe.</div><br>
+         Créatif
+         </div>
 </section>
 <section id="grandeboite3">
     <h2>Hobbies</h2>
-        <div class="text">
+        <div class="text2">
           Jeux Vidéo (Hack’n’Slash, MMO,
-          RPG) ● Cinéma (science-fiction,
-          action, thriller) ● Informatique
-          ● Membre d’une association sur
+          RPG) <br> Cinéma (science-fiction,
+          action, thriller) <br> Informatique
+          <br> Membre d’une association sur
           Disneyland Paris</div><br>
   </section>
-  <section id="grandeboite4"> <!-- on recommence pour la partie parcours perso-->
+  <section id="grandeboite4"> 
+  <!-- on reprend le theme de la boite sans le tablmeau pour la partie parcours perso-->
     <h2>Parcours</h2>
     <div class="text">
-      Je m'appelle Nicolas Perthuisot et j'ai <em>42 ans.</em> 
+      Je m'appelle Nicolas Perthuisot, j'ai <em>42 ans.</em> 
       Je suis diplômé d'un BEP/CAP en mécanique automobile que j'ai obtenu en <em>1998.</em> 
       J'ai commencé ma carrière professionnelle en effectuant quelques missions et formations pour Pôle emploi dans ce domaine. 
       À la suite d'un accident de travail, j'ai changé de style de travail et j'ai travaillé en tant que vendeur étalagiste dans une librairie. 
