--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </td>
         <td><div class="space">
           <h3>Agent d’Entretien Voie</h3>
-          <h4></h4><em>SNCF Réseau, Meaux</em></h4>
+          <h4><em>SNCF Réseau, Meaux</em></h4>
           <div class="text1">Entretien du réseau de la voie ferrée, sous la responsabilité des
           mainteneurs de l’infrastructure.</div>
         </div></td>
@@ -184,7 +184,7 @@
       Entre temps, je me suis renseigné sur la perspective d'évolution vers un autre métier qui découle de la passion que j'ai pour l'informatique. 
       Cette passion est née en 2000 et j'ai commencé par le côté Hardware en démontant et préparant des configurations de PC à l'aide de livres. 
       Cela m'a permis d'augmenter les performances du PC afin de pouvoir jouer aux jeux vidéo.<br> 
-      <br>J'ai eu une grande période de gaming dans laquelle Je jouais à des jeux massivement multijoueurs et où je tenais un rôle de leader de guilde et leader de raid. 
+      <br>J'ai eu une grande période de gaming dans laquelle je jouais à des jeux massivement multijoueurs et où je tenais un rôle de leader de guilde et leader de raid. 
       Cela demandait beaucoup d'organisation et de communication, Nous avons donc eu besoin d'un moyen pour obtenir toutes les informations et instructions du jeu. 
       C'est ainsi que j'ai commencé à faire de <em>l'HTML, SQL, PHP et CSS,</em> qui consistait dans un premier temps à avoir une page déjà faite dans laquelle je pouvais faire des tests, 
       mais par la suite, j'ai voulu pousser mes connaissances pour en faire une par moi-même. <br>
