--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
                   <a href="#grandeboite1">Expériences</a>
               </li>
               <li class="nav-item">
-                  <label for="btn2" class="show">+</label>
+                  <label for="btn2" class="show">plus...</label>
                   <input type="checkbox" id="btn2">
                   <ul class="dropdown">
                       <li class="drop-item">
-                        <a href="#grandeboite2">Qualités</a>
+                        <a href="#grandeboite2">Motivations</a>
                     </li>
                     <li class="drop-item">
-                      <a href="#grandeboite3">Hobbies</a>
+                      <a href="#grandeboite3">Qualités</a>
                   </li>
                   <li class="drop-item">
-                    <a href="#grandeboite4">Parcours</a>
+                    <a href="#grandeboite4">Hobbies</a>
                 </li>
                 <li class="drop-item">
                   <a href="#lu">Réseaux Sociaux</a>
