--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="#grandeboite4">Hobbies</a>
                 </li>
                 <li class="drop-item">
-                  <a href="#lu">Réseaux Sociaux</a>
+                  <a href="#grandeboite5">Réseaux Sociaux</a>
               </li>
                   </ul>
               </li>
