--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </td>
           <td><div class="space">
             <h3>Agent d’Entretien Voie</h3>
-            <h4></h4><em>SNCF Réseau, Meaux</em></h4>
+            <h4><em>SNCF Réseau, Meaux</em></h4>
             <div class="text1">Entretien du réseau de la voie ferrée, sous la responsabilité des
             mainteneurs de l’infrastructure.</div>
           </div></td>
